--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# editor config
+.vscode
+.idea
+
 # dependencies
 /node_modules
 /.pnp
@@ -32,3 +36,6 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+public/sw.js
+public/workbox*
