--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-typescript",
+  "name": "tube-client",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -9,6 +9,10 @@
   },
   "dependencies": {
     "next": "latest",
+    "next-compose-plugins": "^2.2.1",
+    "next-fonts": "^1.5.1",
+    "next-pwa": "^5.0.4",
+    "next-react-svg": "^1.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
@@ -16,7 +20,19 @@
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
-    "typescript": "4.0"
+    "husky": "^4.3.8",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0",
+    "typescript": "4.0",
+    "ts-node": "^9.1.1"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
+  "cacheDirectories": [
+    ".next/cache"
+  ]
 }
