--- a/package.json
+++ b/package.json
@@ -8,13 +8,21 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
+    "@types/react-redux": "^7.1.16",
     "next": "latest",
     "next-compose-plugins": "^2.2.1",
     "next-fonts": "^1.5.1",
     "next-pwa": "^5.0.4",
     "next-react-svg": "^1.1.2",
+    "next-redux-wrapper": "^6.0.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
@@ -23,8 +31,8 @@
     "husky": "^4.3.8",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
-    "typescript": "4.0",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "typescript": "4.0"
   },
   "license": "MIT",
   "husky": {
