--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@capacitor/android": "^2.4.0",
+    "@capacitor/cli": "^2.4.0",
+    "@capacitor/core": "^2.4.6",
+    "@capacitor/ios": "^2.4.6",
     "@reduxjs/toolkit": "^1.5.0",
     "@types/react-redux": "^7.1.16",
+    "auto-bind": "^4.0.0",
     "next": "latest",
     "next-compose-plugins": "^2.2.1",
     "next-fonts": "^1.5.1",
@@ -17,12 +22,14 @@
     "next-react-svg": "^1.1.2",
     "next-redux-wrapper": "^6.0.2",
     "react": "^16.12.0",
+    "react-detect-offline": "^2.4.1",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "sass": "^1.32.5"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
