--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-redux": "^7.1.16",
     "auto-bind": "^4.0.0",
     "classnames": "^2.2.6",
+    "google-maps-react": "^2.0.6",
     "next": "latest",
     "next-compose-plugins": "^2.2.1",
     "next-fonts": "^1.5.1",
