--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@types/react-redux": "^7.1.16",
     "auto-bind": "^4.0.0",
     "classnames": "^2.2.6",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "google-maps-react": "^2.0.6",
+    "heroku-ssl-redirect": "^0.1.1",
     "next": "latest",
     "next-compose-plugins": "^2.2.1",
     "next-fonts": "^1.5.1",
