--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "tube-client",
   "version": "1.0.0",
+  "repository": {
+    "url": "https://github.com/AndrewVolosevich/tube-client",
+    "type": "git"
+  },
   "scripts": {
     "dev": "next",
-    "build": "next build",
-    "start": "next start",
+    "build:next": "next build",
+    "build:server": "tsc --project tsconfig.server.json",
+    "build": "npm run build:next && npm run build:server",
+    "start": "cross-env NODE_ENV=production node build/index.js",
     "type-check": "tsc"
   },
   "dependencies": {
@@ -13,10 +19,13 @@
     "@capacitor/core": "^2.4.6",
     "@capacitor/ios": "^2.4.6",
     "@reduxjs/toolkit": "^1.5.0",
+    "@types/cors": "^2.8.9",
+    "@types/express": "^4.17.11",
     "@types/react-redux": "^7.1.16",
     "auto-bind": "^4.0.0",
     "classnames": "^2.2.6",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "google-maps-react": "^2.0.6",
     "heroku-ssl-redirect": "^0.1.1",
