--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^4.17.11",
     "@types/react-redux": "^7.1.16",
     "auto-bind": "^4.0.0",
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
